View Issue Details

IDProjectCategoryView StatusLast Update
0027080Open CASCADEOCCT:Codingpublic2016-04-20 15:50
ReporterabvAssigned Toabv 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version7.0.0Fixed in Version7.0.0 
Summary0027080: Coding - eliminate CLang compiler warning on OS X: unused parameter (in .mm files)
DescriptionCLang on OS X currently reports these warnings:

Draw_Window_1.mm:49, Clang (LLVM based), Priority: Normal
unused parameter 'theRect'

Draw_Window_1.mm:512, Clang (LLVM based), Priority: Normal
unused parameter 'theMode'

OpenGl_Window_1.mm:56, Clang (LLVM based), Priority: Normal
unused parameter 'theDriver'

ViewerTest_ViewerCommands_1.mm:106, Clang (LLVM based), Priority: Normal
unused parameter 'theNotification'

ViewerTest_ViewerCommands_1.mm:197, Clang (LLVM based), Priority: Normal
unused parameter 'theDirtyRect'

ViewerTest_ViewerCommands_1.mm:270, Clang (LLVM based), Priority: Normal
unused parameter 'theEvent'

Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Activities

git

2016-01-19 14:11

administrator   ~0049930

Branch CR27080 has been created by kgv.

SHA-1: 6a9f574bcffa5468279b04ff7d157beb679a5941


Detailed log of new commits:

Author: kgv
Date: Tue Jan 19 14:10:48 2016 +0300

    0027080: Coding - eliminate CLang compiler warning on OS X: unused parameter (in .mm files)

git

2016-01-19 14:17

administrator   ~0049931

Branch CR27080 has been updated forcibly by kgv.

SHA-1: 4ac99114a506ce97df3321b4d48d496838ff22ad

kgv

2016-01-19 14:18

developer   ~0049932

Patch is ready for review in branch CR27080.

abv

2016-01-20 09:05

manager   ~0049956

No remarks, please check compilation (OS X only) and integrate

mkv

2016-01-20 17:45

tester   ~0049979

Dear BugMaster,
Branch CR27080 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode.
SHA-1: 4ac99114a506ce97df3321b4d48d496838ff22ad

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 1 (7 on master)

products component :
Linux: 36 (36 on master)
Windows: 0 (0 on master)

mkv

2016-01-20 17:46

tester   ~0049980

Dear BugMaster,
Branch CR27080 is TESTED.

git

2016-04-17 13:27

administrator   ~0052866

Branch CR27080 has been deleted by kgv.

SHA-1: 4ac99114a506ce97df3321b4d48d496838ff22ad

Related Changesets

occt: master 5ef127d0

2016-01-19 11:17:45

abv


Committer: abv Details Diff
0027080: Coding - eliminate CLang compiler warning on OS X: unused parameter (in .mm files) Affected Issues
0027080
mod - src/Draw/Draw_Window_1.mm Diff File
mod - src/OpenGl/OpenGl_Window_1.mm Diff File
mod - src/ViewerTest/ViewerTest_ViewerCommands_1.mm Diff File

Issue History

Date Modified Username Field Change
2016-01-15 08:11 abv New Issue
2016-01-15 08:11 abv Assigned To => kgv
2016-01-19 14:11 git Note Added: 0049930
2016-01-19 14:17 git Note Added: 0049931
2016-01-19 14:18 kgv Note Added: 0049932
2016-01-19 14:18 kgv Assigned To kgv => abv
2016-01-19 14:18 kgv Status new => resolved
2016-01-19 14:18 kgv Steps to Reproduce Updated
2016-01-20 09:05 abv Note Added: 0049956
2016-01-20 09:05 abv Assigned To abv => bugmaster
2016-01-20 09:05 abv Status resolved => reviewed
2016-01-20 13:22 mkv Assigned To bugmaster => mkv
2016-01-20 17:45 mkv Note Added: 0049979
2016-01-20 17:46 mkv Note Added: 0049980
2016-01-20 17:46 mkv Assigned To mkv => bugmaster
2016-01-20 17:46 mkv Status reviewed => tested
2016-01-20 17:46 mkv Test case number => Not needed
2016-01-22 12:17 abv Changeset attached => occt master 5ef127d0
2016-01-22 12:17 abv Assigned To bugmaster => abv
2016-01-22 12:17 abv Status tested => verified
2016-01-22 12:17 abv Resolution open => fixed
2016-04-17 13:27 git Note Added: 0052866
2016-04-20 15:43 aiv Fixed in Version => 7.0.0
2016-04-20 15:50 aiv Status verified => closed