0027080: Coding - eliminate CLang compiler warning on OS X: unused parameter (in .mm files)